force-app/main/default/objects/Divestiture_Snapshot__c/Divestiture_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Tracks the status of Divestiture Sites when a list is pulled.</description>
    <label>Divestiture Snapshot</label>
    <nameField>
        <label>Divestiture Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divestiture Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>