force-app/main/default/objects/Divestiture_Snapshot__c/fields/Date_Loaded_to_Intralinks__c.field-meta.xml
<CustomField>
    <fullName>Date_Loaded_to_Intralinks__c</fullName>
    <inlineHelpText>For Mid Month Submissions</inlineHelpText>
    <label>Date Loaded to Intralinks</label>
    <type>Date</type>
</CustomField>