force-app/main/default/objects/Divestiture_Snapshot__c/fields/Exception_Letter_Sent_to_Dish__c.field-meta.xml
<CustomField>
    <fullName>Exception_Letter_Sent_to_Dish__c</fullName>
    <label>Exception Letter Sent to Dish</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>