force-app/main/default/objects/Divestiture_Snapshot__c/fields/Excepton_Letter_Reason__c.field-meta.xml
<CustomField>
    <fullName>Excepton_Letter_Reason__c</fullName>
    <label>Excepton Letter Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>