force-app/main/default/objects/Divestiture_Snapshot__c/fields/Landlord_Entity__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Entity__c</fullName>
    <label>Landlord Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>