force-app/main/default/objects/Divestiture_Snapshot__c/fields/Lattitude__c.field-meta.xml
<CustomField>
    <fullName>Lattitude__c</fullName>
    <description>W-000157 : RF List - POST FINAL LIST TO RELATED OBJECT UPDATE</description>
    <label>Lattitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>