force-app/main/default/objects/Divestiture_Snapshot__c/fields/Lease_Min_Current_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Min_Current_Term_End_Date__c</fullName>
    <label>Lease Min Current Term End Date</label>
    <type>Date</type>
</CustomField>