force-app/main/default/objects/Divestiture_Snapshot__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>W-000157 : RF List - POST FINAL LIST TO RELATED OBJECT UPDATE</description>
    <label>Longitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>