force-app/main/default/objects/Divestiture_Snapshot__c/fields/New_Site_Add__c.field-meta.xml
<CustomField>
    <fullName>New_Site_Add__c</fullName>
    <inlineHelpText>Is this a site that has not appeared on any prior lists?</inlineHelpText>
    <label>New Site Add</label>
    <length>100</length>
    <type>Text</type>
</CustomField>