force-app/main/default/objects/Divestiture_Snapshot__c/fields/Notice_of_Decom_NOD__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Decom_NOD__c</fullName>
    <inlineHelpText>The decomision date of the site that has been shared with Dish.</inlineHelpText>
    <label>Notice of Decom (NOD)</label>
    <type>Date</type>
</CustomField>