force-app/main/default/objects/Divestiture_Snapshot__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <inlineHelpText>Hidden field used to sort lists</inlineHelpText>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>