force-app/main/default/objects/Divestiture_Snapshot__c/fields/Physical_Removal_180_days__c.field-meta.xml
<CustomField>
    <fullName>Physical_Removal_180_days__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When added to the the list this site was less than 180 days from physical removal.</inlineHelpText>
    <label>Physical Removal(&lt;180 days)</label>
    <type>Checkbox</type>
</CustomField>