force-app/main/default/objects/Divestiture_Snapshot__c/fields/Rad_Center_ft_2__c.field-meta.xml
<CustomField>
    <fullName>Rad_Center_ft_2__c</fullName>
    <label>Rad Center (ft) 2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>