force-app/main/default/objects/Divestiture_Snapshot__c/fields/RF_Shutdown_Notice__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Notice__c</fullName>
    <inlineHelpText>RF Shutdown date shared with Dish.</inlineHelpText>
    <label>RF Shutdown (Notice)</label>
    <type>Date</type>
</CustomField>