force-app/main/default/objects/Divestiture_Snapshot__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <label>Site ID</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Divestiture Snapshots</relationshipLabel>
    <relationshipName>Divestiture_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>